tests/e2e/__tests__/miscellaneous/apply-per-api-decorators/snapshot_4.txt
[1] nested/openapi/main.yaml:2:1 at #/info

Info object should contain `license` field.

1 | openapi: 3.1.0
2 | info:
  | ^^^^
3 |   title: Test
4 | paths: {}

Error was generated by the info-license rule.



validating nested/openapi/main.yaml...
nested/openapi/main.yaml: validated in <test>ms

❌ Validation failed with 1 error.
run `redocly lint --generate-ignore-file` to add all problems to the ignore file.

